Fix preloader overflow

--- a/css/base.css
+++ b/css/base.css
@@ -177,6 +177,10 @@ body {
 }
 
 /* =============== Page Loader =============== */
+.loading {
+	overflow: hidden;
+}
+
 .loading::before,
 .loading::after {
 	content: '';
